test new height fix for dyinamic height changes on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,7 @@
 /*}*/
 html {
     position: relative;
+    height: 100dvh;
 }
 
 .button {
